// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
<DocumentFragment>
  <button
    class="css-1ax3zce"
    type="button"
  />
</DocumentFragment>
`;

exports[`Button renders with icons 1`] = `
<DocumentFragment>
  <div
    class="css-1baulvz"
  >
    <button
      class="css-w134wy"
      type="button"
    >
      <svg
        class="css-c999u7"
        data-chakra-custom-icon=""
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <g
          fill="currentColor"
        >
          <path
            d="M11.114,14.556a1.252,1.252,0,0,0,1.768,0L22.568,4.87a.5.5,0,0,0-.281-.849A1.966,1.966,0,0,0,22,4H2a1.966,1.966,0,0,0-.289.021.5.5,0,0,0-.281.849Z"
          />
          <path
            d="M23.888,5.832a.182.182,0,0,0-.2.039l-6.2,6.2a.251.251,0,0,0,0,.354l5.043,5.043a.75.75,0,1,1-1.06,1.061l-5.043-5.043a.25.25,0,0,0-.354,0l-2.129,2.129a2.75,2.75,0,0,1-3.888,0L7.926,13.488a.251.251,0,0,0-.354,0L2.529,18.531a.75.75,0,0,1-1.06-1.061l5.043-5.043a.251.251,0,0,0,0-.354l-6.2-6.2a.18.18,0,0,0-.2-.039A.182.182,0,0,0,0,6V18a2,2,0,0,0,2,2H22a2,2,0,0,0,2-2V6A.181.181,0,0,0,23.888,5.832Z"
          />
        </g>
      </svg>
      Email
    </button>
    <button
      class="css-1gkcy1z"
      type="button"
    >
      Arrow Forward
      <svg
        class="css-1lchrlh"
        data-chakra-custom-icon=""
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`shows spinner and loading text if isLoading and loadingText 1`] = `
<DocumentFragment>
  <button
    aria-disabled="true"
    class="css-1ax3zce"
    data-loading=""
    disabled=""
    type="button"
  >
    <span
      class="css-9pkng7"
    >
      <div
        class="css-1vi2ulp"
      >
        <span
          style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
        >
          Loading...
        </span>
      </div>
    </span>
    Submitting
  </button>
</DocumentFragment>
`;

exports[`shows spinner if isLoading 1`] = `
<DocumentFragment>
  <button
    aria-disabled="true"
    class="css-1ax3zce"
    data-loading=""
    disabled=""
    type="button"
  >
    <span
      class="css-18fo44r"
    >
      <div
        class="css-1vi2ulp"
      >
        <span
          style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
        >
          Loading...
        </span>
      </div>
    </span>
    <span
      class="css-q7lffx"
    >
      Email
    </span>
  </button>
</DocumentFragment>
`;
